[package]
name = "active-time"
description = "A Rust crate to find out the current amount of time the system has been active, excluding time spent hibernating/sleeping."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["realtimeapiset"]
